--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Flight"
-        android:textSize="35sp"
+        android:text="Flight Number"
+        android:textSize="25sp"
         android:id="@+id/textView"
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/editText"
